--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Day Planner</title>
+  <title> CEO Day Planner</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
